# prompt_evolution

./: .env.example  .gitignore  README.md  benchmark_news.py  pyproject.toml  项目.md
.workbuddy/memory/: 2026-06-10.md  2026-06-11.md  2026-06-21.md  2026-06-23.md  MEMORY.md
docs/: CODE_REVIEW.md  RCA_优化效果差根因分析.md  technical-design.md
examples/: ag_news_test.json  ag_news_train.json  basic_usage.py  dataset.json
scripts/: verify_evaluator_fix.py  verify_p0_fix.py  verify_p1_p2_fix.py
src/prompt_evolution/: __init__.py  __main__.py  cli.py
src/prompt_evolution/core/: __init__.py  base.py  models.py
src/prompt_evolution/evaluation/: __init__.py  base.py  evaluator.py
src/prompt_evolution/evaluation/metrics/: __init__.py  accuracy.py  base.py  exact_match.py  f1_score.py
src/prompt_evolution/optimizers/: __init__.py  base.py  factory.py
src/prompt_evolution/optimizers/ape/: __init__.py  optimizer.py
src/prompt_evolution/optimizers/dspy_optimizer/: __init__.py  optimizer.py
src/prompt_evolution/optimizers/evoprompt/: __init__.py  optimizer.py
src/prompt_evolution/optimizers/opro/: __init__.py  optimizer.py
src/prompt_evolution/optimizers/prompt_breeder/: __init__.py  optimizer.py
src/prompt_evolution/optimizers/spo/: __init__.py  optimizer.py
src/prompt_evolution/providers/: __init__.py  base.py  litellm_provider.py
src/prompt_evolution/ui/: app.py
tests/: conftest.py  test_ape.py  test_evaluator.py  test_evolutionary_optimizers.py  test_litellm_provider.py  test_models.py  test_other_optimizers.py
