[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-evolution"
version = "0.1.0"
description = "Prompt 迭代神器 - 一站式 Prompt 自动优化工具"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "prompt-evolution contributors"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "litellm>=1.0.0",
    "gradio>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "rouge-score>=0.1.2",
    "nltk>=3.8.0",
    "tiktoken>=0.5.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
prompt-evolution = "prompt_evolution.cli:app"
prompt-evol = "prompt_evolution.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_evolution"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
